# pomopico

./: .gitignore
firmware/: CMakeLists.txt  clock.c  clock.h  display.c  display.h  pomopico.c  sound.c  sound.h
hardware/pomopico/: pomopico.kicad_pcb  pomopico.kicad_pro  pomopico.kicad_sch
hardware/pomopico/display.pretty/: KEM10106AH.kicad_mod
